2002-01-14  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* main.c: included libgda/libgda.h to avoid warnings.

2002-01-11  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* *.[ch]: assigned copyright to the GNOME Foundation.

2002-01-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* utils.c (gda_mysql_type_to_gda): when we can't resolve the types,
	default to STRING, not to UNKNOWN

2001-12-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-provider.c (get_mysql_types): implemented TYPES schema

2001-12-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-recordset.c (fetch_func): if there are no rows, just
	return, for not causing crashes on invalid memory access. Also,
	provide a default in the switch statement

2001-12-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-provider.c (gda_mysql_provider_get_schema): started
	implementation
	(get_mysql_tables): implemented SCHEMA_TABLES

2001-12-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-recordset.c (fetch_func): don't use mysql_fetch_lengths,
	but the MYSQL_RES 's lengths member. Also, call mysql_fetch_row!

2001-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-provider.c (gda_mysql_provider_supports): new method
	implementation for the MySQL provider

2001-12-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-provider.c (gda_mysql_provider_begin_transaction):
	(gda_mysql_provider_commit_transaction):
	(gda_mysql_provider_rollback_transaction): implemented

2001-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-mysql-provider.c (gda_mysql_provider_get_type): removed extra
	if statement
	(process_sql_commands): initialize counters before using them

2001-12-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am:
	* GNOME_Database_Provider_MySQL.server.in: added '-2' suffix
	to executable name

	* gda-mysql-recordset.c (fetch_func): implemented
	(describe_func): implemented

2001-12-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* utils.c (gda_mysql_type_to_gda): new function
